--- a/contacto.html
+++ b/contacto.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+     <link rel="stylesheet" href="./css/style.css">
     <title>contacto|UC</title>
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -17,11 +19,12 @@
                 </a>
             </div>
             <ul class="menu">
-                <li class="nav-item"><a href="remeras.html" class="nav-link">REMERAS</a></li>
-                <li class="nav-item"><a href="accesorios.html" class="nav-link">ACCESORIOS</a></li>
-                <li class="nav-item"><a href="contacto.html" class="nav-link">CONTACTO</a></li>
+                <li class="navegacion"><a href="remeras.html" class="enlace-menu">REMERAS</a></li>
+                <li class="navegacion"><a href="accesorios.html" class="enlace-menu">ACCESORIOS</a></li>
+                <li class="navegacion"><a href="contacto.html" class="enlace-menu">CONTACTO</a></li>
+                <li><a href="carrito.html"><button class="boton-carrito">CARRITO (0)</button></a></li>
             </ul>
-            <a href="carrito.html"><button class="boton-carrito">CARRITO (0)</button></a>
+          
         </nav>
         </header>
 <section>
@@ -29,47 +32,59 @@
     <h1 class="titulos">contacto</h1>
  </section>
 <main>
-    <section>
+    <section class="informacion-tienda">
+        <div class="redes-sociales">
             <h2 class="subtitulos">Seguinos en nuestras redes sociales</h2>
-            <ul class="link">
-                <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/logo_ig.png" alt="instagram logo" class="logo">INSTAGRAM</a></li>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo">FACEBOOK</a></li>
-                <li><a href="https://www.x.com/" target="_blank"><img src="./img/logo_X.png" alt="x Logo" class="logo"> X</a></li>
+            <ul class="redes-tienda">
+                <li><a href="https://www.instagram.com/" target="_blank" class="red"><img src="./img/logo_ig.png" alt="instagram logo" class="icono">INSTAGRAM</a></li>
+                <li><a href="https://www.facebook.com/" target="_blank" class="red"><img src="./img/logo_facebook.png" alt="facebook logo" class="icono">FACEBOOK</a></li>
+                <li><a href="https://www.x.com/" target="_blank" class="red"><img src="./img/logo_X.png" alt="x Logo" class="icono"> X</a></li>
             </ul>
+        </div>
+
+        <div class="d-flex" style="height: 200px;">
+            <div class="vr"></div>
+        </div>
+
+        <div class="mapa-tienda">
         <h2 class="subtitulos">visitanos en nuestra tienda</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9912369787066!2d-58.44884842437844!3d-34.6043830977416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0d95ad77f5%3A0xdd0be977332b24c6!2sAntezana%20247%2C%20C1414%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1737939737272!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa">
         </iframe>
+        </div>
     </section>
-    <section>
+    <section class="libro-de-quejas">
         <h2 class="subtitulos">libro de quejas</h2>
-        <form action="#" method="post">
-            <label for="nombre" class="libro">nombre</label>
-            <input type="text" name="nombre" id="nombre" placeholder="ingrese su Nombre completo" required>
-            <br><br>
+        <form action="#" method="post" class="formulario">
+            <label for="nombre"class="descripcion">nombre</label>
+            <input type="text" name="nombre" id="nombre" placeholder="ingrese su Nombre completo" required class="libro">
 
-            <label for="numero_telefono" class="libro">Numero de telefono</label>
-            <input type="text" name="numero_telefono" id="numero_telefono" placeholder="ingrese su numero de telefono" required>
-            <br><br>
+            <label for="numero_telefono" class="descripcion">Numero de telefono</label>
+            <input type="text" name="numero_telefono" id="numero_telefono" placeholder="ingrese su numero de telefono" required class="libro">
 
-            <label for="email" class="libro">email</label>
-            <input type="text" name="email" id="email" placeholder="ingrese su email" required>
-            <br><br>
+            <label for="email" class="descripcion">email</label>
+            <input type="text" name="email" id="email" placeholder="ingrese su email" required class="libro">
+ 
+            <label for="mensaje" class="descripcion">mensaje</label>
+            <input type="text" name="mensaje" id="mensaje" maxlength="250" placeholder="ingrese su mensaje (max 250 caracteres)" required class="libro">
 
-            <label for="mensaje" class="libro">mensaje</label>
-            <input type="text" name="mensaje" id="mensaje" maxlength="250" placeholder="ingrese su mensaje (max 250 caracteres)" required>
-            <br><br>
-
-            <button type="submit">enviar</button>
+            <button type="submit" class="boton-formulario">enviar</button>
         </form>
     </section>
 </main>
 <footer>
-    <ul class="link">
-        <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/logo_ig.png" alt="instagram logo" class="logo">INSTAGRAM</a></li>
-        <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo">FACEBOOK</a></li>
-        <li><a href="https://www.x.com/" target="_blank"><img src="./img/logo_X.png" alt="x Logo" class="logo"> X</a></li>
-    </ul>
+    <section class="info">
+        <div>
+            <label for="email" class="recibir-oferta">¡Recibí las mejores ofertas!</label>
+            <input type="text" name="email" id="email" placeholder="ingrese su email" required class="e-mail">
+        </div>
+        <ul class="otras-redes">
+            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/logo_ig.png" alt="instagram logo" class="logo"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo"></a></li>
+            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/logo_X.png" alt="x Logo" class="logo"></a></li>
+        </ul>
+    </section>
     <p class="copy">&copy;  Copyright - 2025 - 2031 www.urbancrow.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.urbancrow.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual</p>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
