--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -18,11 +17,12 @@
             </a>
         </div>
         <ul class="menu">
-            <li class="nav-item"><a href="remeras.html" class="nav-link">REMERAS</a></li>
-            <li class="nav-item"><a href="accesorios.html" class="nav-link">ACCESORIOS</a></li>
-            <li class="nav-item"><a href="contacto.html" class="nav-link">CONTACTO</a></li>
+            <li class="navegacion"><a href="remeras.html" class="enlace-menu">REMERAS</a></li>
+            <li class="navegacion"><a href="accesorios.html" class="enlace-menu">ACCESORIOS</a></li>
+            <li class="navegacion"><a href="contacto.html" class="enlace-menu">CONTACTO</a></li>
+            <li><a href="carrito.html"><button class="boton-carrito">CARRITO</button></a></li>
         </ul>
-        <a href="carrito.html"><button class="boton-carrito">CARRITO (0)</button></a>
+        
     </nav>
     </header>
 <section>
@@ -86,13 +86,19 @@
     </section>
 </main>
 <footer>
-    <ul class="link">
-        <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/logo_ig.png" alt="instagram logo" class="logo">INSTAGRAM</a></li>
-        <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo">FACEBOOK</a></li>
-        <li><a href="https://www.x.com/" target="_blank"><img src="./img/logo_X.png" alt="x Logo" class="logo"> X</a></li>
-    </ul>
+    <section class="info">
+        <div>
+            <label for="email" class="recibir-oferta">¡Recibí las mejores ofertas!</label>
+            <input type="text" name="email" id="email" placeholder="ingrese su email" required class="e-mail">
+        </div>
+        <ul class="otras-redes">
+            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/logo_ig.png" alt="instagram logo" class="logo"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo"></a></li>
+            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/logo_X.png" alt="x Logo" class="logo"></a></li>
+        </ul>
+    </section>
     <p class="copy">&copy;  Copyright - 2025 - 2031 www.urbancrow.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.urbancrow.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual</p>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
