--- a/remeras.html
+++ b/remeras.html
@@ -17,11 +17,11 @@
                 </a>
             </div>
             <ul class="menu">
-                <li class="nav-item"><a href="remeras.html" class="nav-link">REMERAS</a></li>
-                <li class="nav-item"><a href="accesorios.html" class="nav-link">ACCESORIOS</a></li>
-                <li class="nav-item"><a href="contacto.html" class="nav-link">CONTACTO</a></li>
+                <li class="navegacion"><a href="remeras.html" class="enlace-menu">REMERAS</a></li>
+                <li class="navegacion"><a href="accesorios.html" class="enlace-menu">ACCESORIOS</a></li>
+                <li class="navegacion"><a href="contacto.html" class="enlace-menu">CONTACTO</a></li>
+                <li><a href="carrito.html"><button class="boton-carrito">CARRITO</button></a></li>
             </ul>
-           <button class="boton-carrito"> <a href="carrito.html">CARRITO (0)</a></button>
         </nav>
         </header>
 <section>
@@ -38,8 +38,7 @@
                     <option value="remera overside">Overside</option>
                 </select>
             <label for="talles" class="categoria">talles:</label>
-
-            <select name="talle" id="talle">
+            <select name="talle" id="talle" >
                 <option value="s">talle S</option>
                 <option value="m">talle M</option>
                 <option value="l">talle L</option>
@@ -51,73 +50,90 @@
     <section class="catalogo">
             <div class="producto">
                 <a href="carrito.html"><img src="img/baby tee (1).jpg" alt="remera baby tee 1" class="imagen">
-                <p class="texto">remera baby tee 1 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera baby tee 1 </p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
-                <p class="texto">remera overside 2 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera overside 2 </p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
-                <p class="texto">remera overside 3 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera overside 3 </p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/remera overside (4).jpg" alt="remera overside 4" class="imagen">
-                <p class="texto">remera overside 4 <br> <trong>12.999</trong></p> 
+                <p class="texto">remera overside </p>
+                <p class="texto">12.99</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/baby tee (3).jpg" alt="remera baby tee 3" class="imagen">
-                <p class="texto">remera baby tee 3 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera baby tee 3 </p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/remera overside (1).jpg" alt="remera overside 1" class="imagen">
-                <p class="texto">remera Overside 1 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera Overside 1 </p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/baby tee (2).jpg" alt="baby tee 2" class="imagen">
-                <p class="texto">remera baby tee 2 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera baby tee 2 </p>
+                <p class="texto">12.999</p> 
                 </a>
             </div>    
             <div class="producto">
                  <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
-                <p class="texto">remera overside 3 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera overside 3 </p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/remera overside (4).jpg" alt="remera overside 4" class="imagen">
-                <p class="texto">remera overside 4 <br> <trong>12.999</trong></p> 
+                <p class="texto">remera overside </p>
+                <p class="texto">>12.99</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
-                <p class="texto">remera overside 2 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera overside 2 </p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/baby tee (3).jpg" alt="remera baby tee 3" class="imagen">
-                <p class="texto">remera baby tee 3 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera baby tee 3</p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
                 <a href="carrito.html"><img src="img/baby tee (1).jpg" alt="remera baby tee 1" class="imagen">
-                <p class="texto">remera baby tee 1 <br> <strong>12.999</strong></p> 
+                <p class="texto">remera baby tee 1</p>
+                <p class="texto">12.999</p> 
                 </a>     
             </div>
     </section>
 </main>
 <footer>
-    <ul class="link">
-        <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/logo_ig.png" alt="instagram logo" class="logo">INSTAGRAM</a></li>
-        <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo">FACEBOOK</a></li>
-        <li><a href="https://www.x.com/" target="_blank"><img src="./img/logo_X.png" alt="x Logo" class="logo"> X</a></li>
-    </ul>
+    <section class="info">
+        <div>
+            <label for="email" class="recibir-oferta">¡Recibí las mejores ofertas!</label>
+            <input type="text" name="email" id="email" placeholder="ingrese su email" required class="e-mail">
+        </div>
+        <ul class="otras-redes">
+            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/logo_ig.png" alt="instagram logo" class="logo"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo"></a></li>
+            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/logo_X.png" alt="x Logo" class="logo"></a></li>
+        </ul>
+    </section>
     <p class="copy">&copy;  Copyright - 2025 - 2031 www.urbancrow.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.urbancrow.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual</p>
-</footer>
 </body>
 </html>
