--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 </section>
 <main>
     <h1 class="titulos">Pagina principal</h1>
-    <section class="carrusel"> 
+    <section class="contenedor-producto">
+        <div class="slider">
             <div class="producto">
                 <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
                     <p class="texto">lentes 4</p>
@@ -54,10 +55,35 @@
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
+           </div>
+           <div class="producto">
+            <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+                <p class="texto">lentes 4</p>
+                <p class="texto">12.999</p>
+            </a>     
             </div>
+            <div class="producto">
+            <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                    <p class="texto">remera overside 2</p>
+                    <p class="texto">12.999</p>
+                </a>
+            </div>
+            <div class="producto">
+            <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                    <p class="texto">remera overside 3</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+            <div class="producto">
+            <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+                    <p class="texto">anillo 1 </p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+        </div> 
     </section>
     <h2 class="titulos">OFERTAS</h2>
-    <section class="carrusel"> 
+    <section class="slider"> 
             <div class="producto">
                 <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
                     <p class="texto">lentes 4</p>
@@ -80,9 +106,9 @@
                 <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
-
                 </a>     
             </div>
+        
     </section>
 </main>
 <footer>
