--- a/remeras.html
+++ b/remeras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>remeras|UC</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,10 +17,14 @@
                 </a>
             </div>
             <ul class="menu">
+                <div class="contedor-enlace-menu">
                     <li class="navegacion"><a href="remeras.html" class="enlace-menu">REMERAS</a></li>
                     <li class="navegacion"><a href="accesorios.html" class="enlace-menu">ACCESORIOS</a></li>
                     <li class="navegacion"><a href="contacto.html" class="enlace-menu">CONTACTO</a></li>
+                </div>
+                <div class="contenedor-boton-carrito">
                     <li><a href="carrito.html"><button class="boton-carrito">CARRITO</button></a></li>
+                </div>
             </ul>
         </nav>
         </header>
