mejore la animacion de index

--- a/index.html
+++ b/index.html
@@ -84,6 +84,36 @@
                     <p class="texto">12.999</p>
                 </a>     
             </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
+                    <p class="texto">anillo 1 </p>
+                    <p class="texto">12.999</p>
+                </a>     
+           </div>
+           <div class="producto">
+            <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
+                <p class="texto">lentes 4</p>
+                <p class="texto">12.999</p>
+            </a>     
+            </div>
+            <div class="producto">
+            <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
+                    <p class="texto">remera overside 2</p>
+                    <p class="texto">12.999</p>
+                </a>
+            </div>
+            <div class="producto">
+            <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
+                    <p class="texto">remera overside 3</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+            <div class="producto">
+            <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
+                    <p class="texto">anillo 1 </p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
         </div> 
     </section>
     <h2 class="titulos">Pagina principal</h2>
