mejore el responsive

--- a/accesorios.html
+++ b/accesorios.html
@@ -29,7 +29,9 @@
         </nav>
     </header>
 <section>
-    <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
+    <div class="contenedor-gif">
+        <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
+    </div>
     <h1 class="titulos">nuestros accesorios importados</h1>
 </section>
 <main>
