--- a/carrito.html
+++ b/carrito.html
@@ -30,7 +30,7 @@
         </header>
           
 <main>
-    <div class="contenedor-gif">
+    </div>
         <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img>
     </div> 
     <h1>Carrito de Compras</h1>
