--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </nav>
     </header>
 <section>
-   <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
+    <div class="contenedor-gif">
+        <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
+    </div>
 </section>
 <main>
     <h1 class="titulos">OFERTAS</h1>
@@ -119,7 +121,7 @@
     <h2 class="titulos">Pagina principal</h2>
     <section class="catalogo-principal"> 
             <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+                <a href="carrito.html" class="contenedor-catalogo"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
