--- a/remeras.html
+++ b/remeras.html
@@ -55,7 +55,7 @@
     </section>          
     <section class="catalogo">
             <div class="producto">
-                <a href="carrito.html"><img src="img/baby tee (1).jpg" alt="remera baby tee 1" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/baby tee (1).jpg" alt="remera baby tee 1" class="imagen">
                 <p class="texto">remera baby tee 1 </p>
                 <p class="texto">12.999</p> 
                 </a>     
