--- a/accesorios.html
+++ b/accesorios.html
@@ -37,14 +37,21 @@
 <main>
     <section >
         <h2 class="subtitulos">filtrar productos</h2>
-        <form action="#" method="get" class="selector"><!-- selector de categorias -->
-            <label for="producto" class="categoria">Productos</label>
-            <select name="producto" class="valores">
-                <option value="lentes">lentes</option>
-                <option value="anillos">anillos</option>
-                <option value="collares">collares</option>
-            </select>
-            <button type="submit" class="boton-selector">Buscar</button>
+        <form action="#" method="get" class="formulario-main">
+            <div class="selector">
+                <div class="selector-categoria">
+                    <label for="producto" class="categoria">Producto:</label>
+                    <select name="categoria" id="categoria" class="valores">
+                        <option value="todos">Todos</option>
+                        <option value="lentes">Lentes</option>
+                        <option value="anillos">Anillos</option>
+                        <option value="collares">Collares</option>
+                    </select>
+                </div>
+            </div>
+            <div class="contenedor-boton-selector">
+                <button type="submit" class="boton-selector">Buscar</button>
+            </div>      
         </form>
     </section>
     <!-- productos -->
