--- a/carrito.html
+++ b/carrito.html
@@ -52,7 +52,7 @@
                     <td>$20.00</td>
                 </tr>
                 <tr>
-                    <td>accesorios</td>
+                    <td>collar</td>
                     <td>$30.00</td>
                     <td><input type="number" value="1" min="1"></td>
                     <td>$30.00</td>
